<resources>
    <string name="app_name">ReSwipe</string>
    <string name="recipe_name">Name:</string>
    <string name="recipe_time">Time:</string>
    <string name="recipe_description">Description:</string>
    <string name="recipe_ingredients">Ingredients:</string>
    <string name="recipe_details_titel">Recipe Details:</string>
    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search:</string>
    <string name="showDetails">Show Details</string>
    <string name="search_results_titel">Search  Results:</string>
    <string name="add_to_list_1">like</string>
    <string name="add_to_list_2">dislike</string>
    <string name="add_to_list_3">save recipe</string>
    <string name="add_to_list_3.1">saved</string>
    <string name="recipe_list">Recipe Lists:</string>
</resources>