<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.reswipe.reswipe.activities.activities.LandingPageActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="de.reswipe.reswipe.activities.activities.RecipeDetailsActivity">

        <Button
            android:id="@+id/dislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/kochliste"
            android:layout_alignBottom="@+id/kochliste"
            android:layout_alignStart="@+id/LandingPageImage"
            android:layout_marginBottom="16dp"
            android:onClick="dislike"
            android:text="@string/add_to_list_2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/kochliste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewValue"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:onClick="kochliste"
            android:text="@string/add_to_list_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/kochliste"
            android:layout_alignBottom="@+id/kochliste"
            android:layout_alignEnd="@+id/LandingPageImage"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:onClick="like"
            android:text="@string/add_to_list_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/LandingPageImage"
            android:layout_width="341dp"
            android:layout_height="258dp"
            android:clickable="true"
            android:onClick="showRecipeDetails"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewValue"
            tools:layout_editor_absoluteX="22dp"
            app:layout_constraintHorizontal_bias="0.518" />

        <TextView
            android:id="@+id/textViewValue"
            android:layout_width="338dp"
            android:layout_height="77dp"
            android:layout_alignStart="@+id/LandingPageImage"
            android:layout_below="@+id/LandingPageImage"
            android:gravity="center"
            android:textSize="32sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="149dp"
            android:layout_height="41dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:onClick="showRecipeDetails"
            android:text="@string/showDetails"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LandingPageImage" />

    </android.support.constraint.ConstraintLayout>

    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee" />

</android.support.v4.widget.DrawerLayout>
